tests/snapshots/validator_snapshots__validator_all@validator-85.snap
---
source: tests/validator_snapshots.rs
expression: result
input_file: examples/spec/02_variables/block_expression.of
---
ParserError(
    "unexpected token 'var'",
)
