tests/snapshots/validator_snapshots__validator_all@validator-87.snap
---
source: tests/validator_snapshots.rs
expression: result
input_file: examples/spec/02_variables/var_inferred.of
---
ParserError(
    "unexpected token 'var'",
)
