tests/snapshots/validator_snapshots__validator_all@validator-88.snap
---
source: tests/validator_snapshots.rs
expression: result
input_file: examples/spec/01_type_system/union_error_pattern.of
---
Ok
