tests/snapshots/validator_snapshots__validator_all@validator-89.snap
---
source: tests/validator_snapshots.rs
expression: result
input_file: examples/spec/03_functions/early_return.of
---
ParserError(
    "unexpected token identifier 'current'",
)
