tests/snapshots/validator_snapshots__validator_all@validator-9.snap
---
source: tests/validator_snapshots.rs
expression: result
input_file: examples/language/09_extensions.of
---
ValidationErrors(
    [
        "module 'test_module' imports unknown module 'of:core'",
        "unknown variable 'print' in function 'test_module::main'",
        "unknown variable 'print' in function 'test_module::main'",
    ],
)
