tests/snapshots/validator_snapshots__validator_all@validator-90.snap
---
source: tests/validator_snapshots.rs
assertion_line: 51
expression: result
input_file: examples/parser/parse_type_expr_named_with_type_args.of
---
Ok
