tests/snapshots/validator_snapshots__validator_all@validator-92.snap
---
source: tests/validator_snapshots.rs
expression: result
input_file: examples/spec/04_structs_interfaces/interface_basic.of
---
ParserError(
    "unexpected token ','",
)
