tests/snapshots/validator_snapshots__validator_all@validator-94.snap
---
source: tests/validator_snapshots.rs
assertion_line: 51
expression: result
input_file: examples/spec/01_type_system/union_error_pattern.of
---
Ok
