tests/snapshots/validator_snapshots__validator_all@validator-95.snap
---
source: tests/validator_snapshots.rs
expression: result
input_file: examples/spec/02_variables/var_with_type.of
---
ParserError(
    "unexpected token 'var'",
)
