tests/snapshots/validator_snapshots__validator_all@validator-96.snap
---
source: tests/validator_snapshots.rs
expression: result
input_file: examples/spec/03_functions/lambdas.of
---
ParserError(
    "unexpected token 'var'",
)
